--- a/Fresh/Fresh/New.storyboard
+++ b/Fresh/Fresh/New.storyboard
@@ -296,62 +296,115 @@
         <scene sceneID="UpT-PV-vgA">
             <objects>
                 <tableViewController storyboardIdentifier="products" id="lkD-H8-9J0" customClass="ProductsTableViewController" customModule="Fresh" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="shh-W1-5Sb">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="shh-W1-5Sb">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <sections>
                             <tableViewSection id="ycK-wA-uri">
                                 <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="nGu-Dg-Mgq">
-                                        <rect key="frame" x="0.0" y="64" width="600" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="65" id="nGu-Dg-Mgq">
+                                        <rect key="frame" x="0.0" y="99" width="600" height="65"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="nGu-Dg-Mgq" id="Xav-mH-PAv">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="64.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3si-RZ-dcP">
-                                                    <rect key="frame" x="0.0" y="0.0" width="600" height="30"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name of the product" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3si-RZ-dcP" customClass="FloatLabelTextField" customModule="Fresh" customModuleProvider="target">
+                                                    <rect key="frame" x="0.0" y="-1" width="600" height="50.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <textInputTraits key="textInputTraits"/>
                                                 </textField>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstAttribute="bottomMargin" secondItem="3si-RZ-dcP" secondAttribute="bottom" constant="5.5" id="8Fo-WR-9xc"/>
+                                                <constraint firstItem="3si-RZ-dcP" firstAttribute="top" secondItem="Xav-mH-PAv" secondAttribute="topMargin" constant="-8" id="9lQ-Gn-meV"/>
+                                                <constraint firstAttribute="trailing" secondItem="3si-RZ-dcP" secondAttribute="trailing" constant="20" id="BM9-c5-sHW"/>
                                                 <constraint firstItem="3si-RZ-dcP" firstAttribute="leading" secondItem="Xav-mH-PAv" secondAttribute="leading" id="F4v-1J-CUK"/>
-                                                <constraint firstAttribute="trailing" secondItem="3si-RZ-dcP" secondAttribute="trailing" id="YbZ-md-X34"/>
+                                                <constraint firstItem="3si-RZ-dcP" firstAttribute="top" secondItem="Xav-mH-PAv" secondAttribute="top" constant="7" id="MFe-J7-Bjp"/>
+                                                <constraint firstAttribute="trailing" secondItem="3si-RZ-dcP" secondAttribute="trailing" constant="20" id="YbZ-md-X34"/>
+                                                <constraint firstItem="3si-RZ-dcP" firstAttribute="leading" secondItem="Xav-mH-PAv" secondAttribute="leading" constant="20" id="s6K-Ie-nGu"/>
+                                                <constraint firstAttribute="bottom" secondItem="3si-RZ-dcP" secondAttribute="bottom" constant="7" id="uyC-YC-jDn"/>
                                             </constraints>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="8Fo-WR-9xc"/>
+                                                    <exclude reference="9lQ-Gn-meV"/>
+                                                    <exclude reference="F4v-1J-CUK"/>
+                                                    <exclude reference="YbZ-md-X34"/>
+                                                </mask>
+                                            </variation>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="zZr-pU-h8a">
-                                        <rect key="frame" x="0.0" y="108" width="600" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="65" id="hwj-Gh-Q6I">
+                                        <rect key="frame" x="0.0" y="164" width="600" height="65"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zZr-pU-h8a" id="5vF-Hd-EeJ">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hwj-Gh-Q6I" id="Wxq-Jm-nTx">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="64.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Description" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bUq-cx-b1r" customClass="FloatLabelTextField" customModule="Fresh" customModuleProvider="target">
+                                                    <rect key="frame" x="0.0" y="-1" width="600" height="50.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="hintYPadding">
+                                                            <real key="value" value="0.0"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                </textField>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="bUq-cx-b1r" secondAttribute="bottom" constant="7" id="Db0-Kb-3eV"/>
+                                                <constraint firstItem="bUq-cx-b1r" firstAttribute="leading" secondItem="Wxq-Jm-nTx" secondAttribute="leading" constant="20" id="KHs-aT-8Jy"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="bUq-cx-b1r" secondAttribute="bottom" constant="5.5" id="KTi-Fh-sas"/>
+                                                <constraint firstItem="bUq-cx-b1r" firstAttribute="top" secondItem="Wxq-Jm-nTx" secondAttribute="topMargin" constant="-8" id="NFT-7z-63Y"/>
+                                                <constraint firstItem="bUq-cx-b1r" firstAttribute="top" secondItem="Wxq-Jm-nTx" secondAttribute="top" constant="7" id="Ntc-YI-Rcz"/>
+                                                <constraint firstAttribute="trailing" secondItem="bUq-cx-b1r" secondAttribute="trailing" constant="20" id="QeX-4a-aLe"/>
+                                                <constraint firstItem="bUq-cx-b1r" firstAttribute="leading" secondItem="Wxq-Jm-nTx" secondAttribute="leading" id="Ts1-5M-rHE"/>
+                                                <constraint firstAttribute="trailing" secondItem="bUq-cx-b1r" secondAttribute="trailing" constant="20" id="eWs-F7-iil"/>
+                                            </constraints>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="KTi-Fh-sas"/>
+                                                    <exclude reference="NFT-7z-63Y"/>
+                                                    <exclude reference="Ts1-5M-rHE"/>
+                                                    <exclude reference="eWs-F7-iil"/>
+                                                </mask>
+                                            </variation>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="qk6-c8-b4d">
-                                        <rect key="frame" x="0.0" y="152" width="600" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="65" id="wdM-3A-Pcw">
+                                        <rect key="frame" x="0.0" y="229" width="600" height="65"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qk6-c8-b4d" id="OrC-5h-FdS">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wdM-3A-Pcw" id="P2v-g5-8xp">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="64.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="uK8-GL-qme">
-                                        <rect key="frame" x="0.0" y="196" width="600" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="uK8-GL-qme" id="wqr-TO-ETG">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="2xh-58-Ugf">
-                                        <rect key="frame" x="0.0" y="240" width="600" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2xh-58-Ugf" id="vss-LY-abv">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name of the product" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kRC-Ta-3zd" customClass="FloatLabelTextField" customModule="Fresh" customModuleProvider="target">
+                                                    <rect key="frame" x="0.0" y="-1" width="600" height="50.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="kRC-Ta-3zd" secondAttribute="trailing" constant="20" id="2ig-ij-52C"/>
+                                                <constraint firstItem="kRC-Ta-3zd" firstAttribute="top" secondItem="P2v-g5-8xp" secondAttribute="topMargin" constant="-8" id="6F9-Pp-GKw"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="kRC-Ta-3zd" secondAttribute="bottom" constant="5.5" id="7zC-IA-VIe"/>
+                                                <constraint firstAttribute="bottom" secondItem="kRC-Ta-3zd" secondAttribute="bottom" constant="7" id="LJa-g3-S7Y"/>
+                                                <constraint firstItem="kRC-Ta-3zd" firstAttribute="top" secondItem="P2v-g5-8xp" secondAttribute="top" constant="7" id="Upc-6J-Yu2"/>
+                                                <constraint firstAttribute="trailing" secondItem="kRC-Ta-3zd" secondAttribute="trailing" constant="20" id="dgw-cI-4qe"/>
+                                                <constraint firstItem="kRC-Ta-3zd" firstAttribute="leading" secondItem="P2v-g5-8xp" secondAttribute="leading" id="qom-fb-LmO"/>
+                                                <constraint firstItem="kRC-Ta-3zd" firstAttribute="leading" secondItem="P2v-g5-8xp" secondAttribute="leading" constant="20" id="tUa-s8-Jw9"/>
+                                            </constraints>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="7zC-IA-VIe"/>
+                                                    <exclude reference="6F9-Pp-GKw"/>
+                                                    <exclude reference="qom-fb-LmO"/>
+                                                    <exclude reference="2ig-ij-52C"/>
+                                                </mask>
+                                            </variation>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </cells>
@@ -363,8 +416,15 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Add your products" id="0DO-kr-FpX">
-                        <barButtonItem key="rightBarButtonItem" title="Done" id="xgX-tH-A55"/>
+                        <barButtonItem key="rightBarButtonItem" title="Done" id="xgX-tH-A55">
+                            <connections>
+                                <action selector="tapOnButtonDone:" destination="lkD-H8-9J0" id="T4j-ek-aza"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="buttonDone" destination="xgX-tH-A55" id="KRw-QA-JC5"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x6q-Ty-gOU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -441,10 +501,10 @@
             </objects>
             <point key="canvasLocation" x="1414" y="1186"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Products Navigation View Controller-->
         <scene sceneID="9nb-sO-6rm">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="EfT-RH-JJq" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="EfT-RH-JJq" customClass="ProductsNavigationViewController" customModule="Fresh" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="0zI-ET-FHG">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
